--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <Header>
             <div class="contenedor">
-                 <h1 class="icon-camera" style="font-family: Georgia, 'Times New Roman', Times, serif;"> Farieta Estudios Fotograficos</h1>  
+                 <h1 class="icon-camera" > Farieta Estudios Fotograficos</h1>  
                 <input type="checkbox" id="menu-bar">
                 <label class="icon-menu" for="menu-bar"></label>
                 <nav class="menu">
